--- a/web/CSS/EstiloIncio.css
+++ b/web/CSS/EstiloIncio.css
@@ -332,11 +332,11 @@ text-shadow: initial;
 }
 
 #ContenidoInternoSolicitud{
-   width:60%;
+   width:55%;
     min-height:200px;
     float:left;
-    padding:20px;
-    margin-left:200px;
+    padding:25px;
+    margin-left:250px;
     margin-top:5px;
     margin-bottom: 20px;
     box-shadow: 0px 3px 11px rgba(060, 000, 000, 0.5), inset 0px 0px 1px rgba(060, 000, 000, 1);
@@ -443,7 +443,7 @@ input.valid{
 .confirmarOK {
 font-size: 1.2em;
 color: green;
-font-weight: bold;}
+}
 
 .fontWi {
 font-size: 1em;
